--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -17,6 +17,9 @@
     width: 16px;
     height: 16px;
   }
+  &:disabled {
+    opacity: 0.7;
+  }
 }
 
 .primary {
@@ -58,7 +61,7 @@
 .tertiary {
   border: 1px solid var(--color-accent-500, #8c61ff);
   color: var(--color-accent-500, #8c61ff);
-  background-color: var(--color-dark-900, #000);
+  background-color: inherit;
   &:hover {
     border: 1px solid var(--primary-700, #704ecc);
     background-color: var(--color-dark-500, #333);
