add Input component

--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -13,7 +13,7 @@
   &:focus {
     outline: 2px solid var(--color-info-700, #2f68cc);
   }
-  img {
+  svg {
     width: 16px;
     height: 16px;
   }
