--- a/src/components/ui/input/input.module.scss
+++ b/src/components/ui/input/input.module.scss
@@ -2,14 +2,13 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 5px;
     width: 20rem;
 
     svg {
         position: absolute;
         width: 25px;
         height: 25px;
-        top: 5px;
+        bottom: 5px;
         &.search {            
             left: 5px;
         }
@@ -28,7 +27,7 @@
     }
 
     input {
-        color: var(--color-dark-100, #808080);
+        color: var(--color-light-100, #fff);
         border-radius: 2px;
         border: 1px solid var(--color-dark-300, #4C4C4C);
         background-color: var(--color-dark-900, #000);;
@@ -37,7 +36,7 @@
         
         &:focus {
             border: 2px solid var(--color-info-700, #2F68CC);
-            outline: var(--color-info-700, #2F68CC);
+            outline: var(--color-info-700, #2F68CC);            
         }
 
         &[type="search"] {
@@ -57,6 +56,9 @@
     }
     
     .message {
-        color: var(--color-danger-300, #F23D61)
+        color: var(--color-danger-300, #F23D61);
+        position: absolute;
+        bottom: -24px;
+        left: 10px;
     }
 }
