refactoring LoginForm component

--- a/src/common/ui/checkBox/checkbox.module.scss
+++ b/src/common/ui/checkBox/checkbox.module.scss
@@ -2,7 +2,7 @@
     button {
         all: unset;
     }
-    
+    cursor: pointer;
     display: inline-flex;
     justify-content: left;
     align-items: center;
