--- a/src/common/ui/typography/typography.module.scss
+++ b/src/common/ui/typography/typography.module.scss
@@ -2,6 +2,8 @@
     font-family: Roboto, sans-serif;
     font-style: normal;
     color: var(--color-dark-900, #000);
+    margin: 0;
+    padding: 0;
 }
 .Large {
     font-size: 26px;
