--- a/src/common/ui/button/button.module.scss
+++ b/src/common/ui/button/button.module.scss
@@ -10,6 +10,7 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 24px;
+  cursor: pointer;
   &:focus:not(:active) {
     outline: 2px solid var(--color-info-700, #2f68cc);
   }
