--- a/src/common/ui/input/input.module.scss
+++ b/src/common/ui/input/input.module.scss
@@ -14,6 +14,7 @@
         }
         &.optic, &.delete {            
             right: 5px;
+            cursor: pointer;
         }
         
     }
